--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,89 @@
-version: "3.7"
+version: "3"
 
 services:
-  cms:
-    image: agentejo/cockpit
-    container_name: cockpit_cms
+  #
+  # Node
+  #
+  node:
+    image: node:12-alpine
+    volumes:
+      - ./:/usr/src/enjoyingredients
+    working_dir: /usr/src/enjoyingredients
+    restart: "no"
+    command: npm install
+
+  #
+  # Application
+  #
+  enjoyingredients:
+    image: node:12-alpine
+    container_name: enjoyingredients
+    ports:
+      - "3000:3000"
+    environment:
+      HOST: 0.0.0.0
+    depends_on:
+      - api
+    volumes:
+      - ./:/usr/src/enjoyingredients
+    working_dir: /usr/src/enjoyingredients
+    command: npm run dev
+
+  #
+  # Database
+  #
+  mysql:
+    image: mysql:5.7
+    volumes:
+      - dbdata:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DB}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PWD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PWD}
+    ports:
+      - "3306:3306"
+
+  #
+  # API instance
+  # This should serve our api requests and won't work before database
+  # is properly installed by running the installer
+  #
+  api:
+    image: directus/api:v2-apache
     ports:
       - "8080:80"
-    networks:
-      - enjoynet
+    environment:
+      # App
+      DIRECTUS_APP_ENV: "development"
+      DIRECTUS_APP_TIMEZONE: "Europe/Berlin"
 
-networks:
-  enjoynet:
-    driver: bridge
+      # These are now required, make sure to always set
+      # to something unique while in production
+      DIRECTUS_AUTH_PUBLICKEY: "some random secret"
+      DIRECTUS_AUTH_SECRETKEY: "another random secret"
+
+      # Database
+      DIRECTUS_DATABASE_HOST: "mysql"
+      DIRECTUS_DATABASE_PORT: "3306"
+      DIRECTUS_DATABASE_NAME: ${MYSQL_DB}
+      DIRECTUS_DATABASE_USERNAME: ${MYSQL_USER}
+      DIRECTUS_DATABASE_PASSWORD: ${MYSQL_PWD}
+    links:
+      - mysql:mysql
+
+  #
+  # APP instance
+  # This is our graphical management interface
+  #
+  app:
+    image: directus/app:v7-node
+    ports:
+      - "8090:80"
+    environment:
+      # Endpoints
+      DIRECTUS_APP_TITLE: ${APP_TITLE}
+      DIRECTUS_APP_URL: "http://localhost:8080/_/"
+
+volumes:
+  dbdata:
