--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "nuxt": "^2.10.0"
-  }
+    "@directus/sdk-js": "^6.0.0-alpha.2",
+    "@nuxtjs/axios": "^5.6.0",
+    "nuxt": "^2.10.0",
+    "nuxt-i18n": "^6.3.0"
+  },
+  "devDependencies": {}
 }
