--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,9 +12,9 @@ RUN npm ci
 
 # Copy the source code and build it production-ready
 COPY --chown=node:node . .
-RUN npm run build
 
-ENV HOST 0.0.0.0
-EXPOSE 3000
+ENV NODE_ENV=production
+
+RUN npm run build
 
 CMD ["npm", "run", "start"]
