--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,16 +8,15 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "content/blog"
+  - name: "blog_posts"
+    label: "Blog Posts"
+    label_singular: "Blog Post"
+    folder: "content/blog/posts"
     create: true
     slug: "{{slug}}"
-    editor:
-     preview: false
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Language", name: "language", widget: "select", options: ["DE", "EN"] }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Featured Image", name: "thumbnail", widget: "image", required: false }
+      - { label: "Publish Date", name: "date", widget: "date", format: "DD.MM.YYYY" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
