--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -56,6 +56,7 @@ collections:
     folder: "content/blog/categories"
     create: true
     slug: "{{slug}}"
+    identifier_field: "name"
     fields:
       - label: "Name"
         name: "name"
