--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,8 +50,8 @@ collections:
     folder: 'content/blog/posts'
     slug: '{{slug}}'
     path: '{{slug}}/index'
-    media_folder: ''
-    public_folder: ''
+    # media_folder: 'content/blog/posts/{{slug}}'
+    # public_folder: ''
     fields:
       - name: 'title'
         label: 'Titel'
