--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "enjoyingredients",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "EnjoyIngredients - the other food blog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Lukas Zanner <mail@lukaszanner.de>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/zann1x/enjoyingredients/issues"
   },
   "dependencies": {
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
-    "gatsby-plugin-google-analytics": "^2.1.29",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-netlify-cms": "^4.1.37",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-plugin-typography": "^2.3.18",
     "gatsby-remark-copy-linked-files": "^2.1.31",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.1.35",
@@ -29,16 +27,13 @@
     "netlify-cms-app": "^2.11.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
     "tailwindcss": "^1.1.4"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://enjoyingredients.de/",
   "keywords": [
     "gatsby"
   ],
@@ -54,7 +49,6 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   }
 }
