--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "url": "https://github.com/zann1x/enjoyingredients/issues"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-remark-copy-linked-files": "^2.1.31",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.1.35",
@@ -25,7 +27,8 @@
     "gatsby-transformer-sharp": "^2.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
