--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-source-ghost": "^4.0.3",
     "gatsby-transformer-remark": "^2.6.39",
     "gatsby-transformer-sharp": "^2.3.7",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
