--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
