--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-catch-links": "^2.1.25",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
