--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,144 @@
-version: '3'
+version: '3.3'
+
+networks:
+  traefiknet:
+  internal:
+
+volumes:
+  db_data:
+  ghost_content:
 
 services:
-  ghost:
-    image: ghost:3-alpine
+##############################
+# Traefik Reverse Proxy
+# https://hub.docker.com/_/traefik/
+##############################
+  traefik:
+    image: traefik:2.2
     restart: unless-stopped
+    command:
+      # Webpanel
+      - --api=true
+      - --api.dashboard=true
+      # HTTP
+      - --entrypoints.web.address=:80 # web is a custom name
+      - --entrypoints.web.http.redirections.entrypoint.to=websecure
+      - --entrypoints.web.http.redirections.entrypoint.scheme=https
+      - --entrypoints.websecure.address=:443 # websecure is a custom name
+      # Docker
+      - --providers.docker=true
+      - --providers.docker.exposedByDefault=false
+      - --providers.docker.network=traefiknet
+      # TLS
+      - --certificatesresolvers.lencrypt.acme.email=${ACME_EMAIL} # lencrypt is a custom name
+      - --certificatesresolvers.lencrypt.acme.storage=/letsencrypt/acme.json
+      - --certificatesresolvers.lencrypt.acme.tlschallenge=true
+      - --certificatesresolvers.lencrypt.acme.httpchallenge.entrypoint=web
+      # - --certificatesresolvers.lencrypt.acme.caserver= https://acme-v02.api.letsencrypt.org/directory
+      - --certificatesresolvers.lencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+    labels:
+      # Webpanel
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.rule=Host(`${DOMAINS_TRAEFIK}`)" # api is a custom name
+      - "traefik.http.routers.api.entrypoints=websecure"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.tls=true"
+      - "traefik.http.routers.api.tls.certresolver=lencrypt"
+      # Webpanel authentication
+      - "traefik.http.routers.api.middlewares=user-auth"
+      - "traefik.http.middlewares.user-auth.basicauth.users=${BASIC_AUTH}" # user-auth is a custom name
+      # Security headers
+      - "traefik.http.middlewares.securityHeader.headers.framedeny=true" # securityHeader is a custom name
+      - "traefik.http.middlewares.securityHeader.headers.sslredirect=true"
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - internal
+      - traefiknet
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${PWD}/config/letsencrypt:/letsencrypt
+
+##############################
+# Watchtower
+# https://hub.docker.com/r/containrrr/watchtower
+#
+# Applies updates (if available) at midnight.
+##############################
+  watchtower:
+    image: containrrr/watchtower:latest
+    restart: unless-stopped
+    command: --cleanup --schedule "0 0 0 * * *"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+##############################
+# MariaDB
+# https://hub.docker.com/_/mariadb/
+##############################
+  db:
+    image: mariadb:10.5
+    restart: unless-stopped
+    networks:
+      - internal
+    volumes:
+      - type: volume
+        source: db_data
+        target: /var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+
+##############################
+# Ghost CMS
+# https://hub.docker.com/_/ghost/
+##############################
+  ghost:
+    image: ghost:3.29-alpine
+    restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ghost.rule=Host(`${DOMAINS_BLOG}`)"
+      - "traefik.http.routers.ghost.entrypoints=websecure"
+      - "traefik.http.routers.ghost.tls=true"
+      - "traefik.http.routers.ghost.tls.certresolver=lencrypt"
+    depends_on:
+      - db
+      - mail
+      - traefik
+    networks:
+      - internal
+      - traefiknet
     volumes:
       - type: volume
         source: ghost_content
         target: /var/lib/ghost/content
     environment:
-      url: {BLOG_URL:-http://localhost:3000}
+      url: ${BLOG_URL}
       database__client: mysql
-      database__connection__host: ghost-db
-      database__connection__user: {DB_CON_USER:-root}
-      database__connection__password: {DB_CON_PWD:-example}
-      database__connection__database: {DB_CON_DB:-ghost}
-    labels:
-      - traefik.backend=ghost
-      - traefik.frontend.rule=Host:localhost:8000
-      - traefik.docker.network=internal
-      - traefik.port=2368
+      database__connection__host: db
+      database__connection__database: ${DB_NAME}
+      database__connection__user: ${DB_USER}
+      database__connection__password: ${DB_PASSWORD}
+      mail__transport: SMTP
+      mail__from: "Ghost CMS <${SERVER_EMAIL}>"
+      mail__options__service: SMTP
+      mail__options__host: mail
+      mail__options__port: 25
+
+
+##############################
+# Mail service
+# https://hub.docker.com/r/bytemark/smtp
+#
+# This allows Matomo and Ghost to send email straight out of the box.
+# It makes an SMTP host available at the hostname "mail".
+##############################
+  mail:
+    image: bytemark/smtp
+    restart: unless-stopped
     networks:
-      - internal
-
-  ghost-db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: {DB_ROOT_PWD:-example}
-    networks:
-      - internal
-
-  reverse-proxy:
-    image: traefik:2.2
-    restart: always
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"
-    volumes:
-      - ./traefik.toml:/etc/traefik/traefik.toml
-      - /var/run/docker.sock:/var/run/docker.sock
-    labels:
-      - traefik.port=8080
-      - traefik.backend=traefik
-      - traefik.frontend.rule=Host:monitor.localhost:8000
-    networks:
-      - internal
-
-volumes:
-  ghost_content:
-    driver: local
-
-networks:
-  internal:
-    driver: bridge
+      - traefiknet
