--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby": "^2.23.11",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-catch-links": "^2.3.7",
+    "gatsby-plugin-ghost-images": "^1.5.2",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-postcss": "^2.3.6",
     "gatsby-plugin-react-helmet": "^3.3.6",
