--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-source-ghost": "^4.0.5",
     "gatsby-transformer-remark": "^2.8.19",
     "gatsby-transformer-sharp": "^2.5.7",
+    "jamify-source-ghost": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
