--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
+    "arrowParens": "always",
     "bracketSpacing": true,
-    "endOfLine": "lf",
-    "semi": false,
-    "singleQuote": false,
+    "semi": true,
+    "singleQuote": true,
     "tabWidth": 4,
-    "trailingComma": "es5",
+    "trailingComma": "all",
     "useTabs": false
 }
