--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "styled-components": "^5.1.1",
-    "styled-theming": "^2.2.0"
+    "styled-theming": "^2.2.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "prettier": "^1.19.1",
     "tailwindcss": "^1.7.3"
@@ -52,9 +56,10 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "type-check": "tsc"
   }
 }
