Update web link in package.json

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier": "^1.19.1",
     "tailwindcss": "^1.7.3"
   },
-  "homepage": "https://enjoyingredients.de/",
+  "homepage": "https://enjoyingredients.com/",
   "keywords": [
     "gatsby"
   ],
