--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,13 @@
     "singleQuote": true,
     "tabWidth": 4,
     "trailingComma": "all",
-    "useTabs": false
+    "useTabs": false,
+    "overrides": [
+        {
+            "files": ["*.json", "*.yml", "*yaml"],
+            "options": {
+                "tabWidth": 2,
+            }
+        }
+    ]
 }
