--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": "./src",
@@ -14,11 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -28,6 +20,6 @@
     "resolveJsonModule": true,
     "strict": false,
     "skipLibCheck": true,
-    "target": "es5",
+    "target": "es5"
   }
 }
