--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
+    "husky": "^5.0.9",
     "prettier": "^1.19.1",
     "tailwindcss": "^1.7.3"
   },
