--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/zann1x/enjoyingredients/issues"
   },
   "dependencies": {
+    "@tryghost/content-api": "^1.4.14",
     "babel-plugin-styled-components": "^1.11.1",
     "next": "^10.0.7",
     "react": "^16.13.1",
