--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "allowJs": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -15,7 +15,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
-      "~*": ["./*"]
+      "~/*": ["src/*"]
     },
     "resolveJsonModule": true,
     "strict": false,
