--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "husky": "^5.0.9",
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.7.3"
+    "prettier": "^1.19.1"
   },
   "homepage": "https://enjoyingredients.com/",
   "keywords": [
