--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# dotenv environment variable files
-.env*
-!.env.sample
-
-# gatsby files
 .cache/
+.idea/
+node_modules/
 public/
